--- a/src/afuxml/Makefile.fpc
+++ b/src/afuxml/Makefile.fpc
@@ -21,7 +21,8 @@ units=$(AFUDFMODULE)
 files=$(wildcard *.bak)
 
 [compiler]
-options= $(LAZARUS_LIBPATHS)   -XX -Xs -CX -O2 $(USEPTRINT)
+options= $(LAZARUS_LIBPATHS)   -XX -Xs -CX -O2 $(USEPTRINT) \
+	$(OUTPUTLIB)
 
 unitdir=.  $(LAZDIR)/lcl/units/$(CPU_TARGET)-$(OS_TARGET) \
            $(LAZDIR)/lcl/units/$(CPU_TARGET)-$(OS_TARGET)/$(LCL_PLATFORM) \
@@ -41,6 +42,12 @@ BUILDDIR=../../build/$(OS_TARGET)-$(CPU_TARGET)
 LIBDIR=../../build/lib/$(CPU_TARGET)-$(OS_TARGET)
 ifdef UsePtrInt
 USEPTRINT = -dUsePtrInt
+endif
+
+ifeq ($(OS_TARGET),linux)
+OUTPUTLIB=-o$(AFUDFMODULE)$(SHAREDLIBEXT)
+else
+OUTPUTLIB=
 endif
 
 ifndef LCL_PLATFORM
