--- a/src/afucrypt/Makefile.fpc
+++ b/src/afucrypt/Makefile.fpc
@@ -19,7 +19,8 @@ units=$(AFUDFMODULE)
 files=$(wildcard *.bak)
 
 [compiler]
-options= $(LAZARUS_LIBPATHS)   -XX -Xs -CX -O2  $(USEPTRINT)        
+options= $(LAZARUS_LIBPATHS)   -XX -Xs -CX -O2  $(USEPTRINT) \
+	$(OUTPUTLIB)
 
 unitdir=.  $(LAZDIR)/lcl/units/$(CPU_TARGET)-$(OS_TARGET) \
            $(LAZDIR)/lcl/units/$(CPU_TARGET)-$(OS_TARGET)/$(LCL_PLATFORM) \
@@ -44,6 +45,12 @@ endif
 # LCL Platform
 ifndef LCL_PLATFORM
 LCL_PLATFORM=nogui
+endif
+
+ifeq ($(OS_TARGET),linux)
+OUTPUTLIB=-o$(AFUDFMODULE)$(SHAREDLIBEXT)
+else
+OUTPUTLIB=
 endif
 
 ifneq ($(findstring $(OS_SOURCE),win32 win64),)
